# instaserv

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
instaserv/: _version.py
serv/: .gitignore
